# GeometricTools

./: .gitignore  CMakeLists.txt  README.md
GTEngine/: GTBuildAll.sln  GTEngine.sln  GTEngine.vcxproj  GTEngine.vcxproj.filters  makefile.gte
GTEngine/GTEngine.xcodeproj/: project.pbxproj
GTEngine/Include/: GTEngine.h  GTEngineDEF.h  GTEnginePCH.h  GteACosEstimate.h  GteASinEstimate.h  GteATanEstimate.h  GteAlignedBox.h  GteApprCircle2.h  GteApprEllipse2.h  GteApprEllipsoid3.h  GteApprGaussian2.h  GteApprGaussian3.h  GteApprGreatCircle3.h  GteApprHeightLine2.h  GteApprHeightPlane3.h  GteApprOrthogonalLine2.h  GteApprOrthogonalLine3.h  GteApprOrthogonalPlane3.h  GteApprParaboloid3.h  GteApprPolynomial2.h  GteApprPolynomial3.h  GteApprPolynomial4.h  GteApprPolynomialSpecial2.h  GteApprPolynomialSpecial3.h  GteApprPolynomialSpecial4.h  GteApprQuadratic2.h  GteApprQuadratic3.h  GteApprQuery.h  GteApprSphere3.h  GteArc2.h  GteArithmetic.h  GteArray2.h  GteAtomicMinMax.h  GteAxisAngle.h  GteBSNumber.h  GteBSPrecision.h  GteBSRational.h  GteBSplineCurve.h  GteBSplineCurveFit.h  GteBSplineSurface.h  (+455 more)
GTEngine/Shaders/: ConstantColorEffect.hlsl  DirectionalLightTextureEffect.hlsl  Fluid2AdjustVelocity.hlsl  Fluid2ComputeDivergence.hlsl  Fluid2EnforcePoissonBoundary.hlsl  Fluid2EnforceStateBoundary.hlsl  Fluid2GenerateVortex.hlsl  Fluid2InitializeSource.hlsl  (+33 more)
GTEngine/Source/: CMakeLists.txt  GTEnginePCH.cpp  GteBSPrecision.cpp  GteBitHacks.cpp  GteBlendState.cpp  GteBoundingSphere.cpp  GteBuffer.cpp  GteCamera.cpp  GteCommand.cpp  GteComputeModel.cpp  GteComputeShader.cpp  GteConstantBuffer.cpp  GteConstantColorEffect.cpp  GteCuller.cpp  GteCullingPlane.cpp  GteDX11BlendState.cpp  GteDX11Buffer.cpp  GteDX11ComputeShader.cpp  GteDX11ConstantBuffer.cpp  GteDX11DepthStencilState.cpp  GteDX11DrawTarget.cpp  GteDX11DrawingState.cpp  GteDX11Engine.cpp  GteDX11GeometryShader.cpp  GteDX11GraphicsObject.cpp  GteDX11IndexBuffer.cpp  GteDX11IndirectArgumentsBuffer.cpp  GteDX11InputLayout.cpp  GteDX11InputLayoutManager.cpp  GteDX11PerformanceCounter.cpp  GteDX11PixelShader.cpp  GteDX11RasterizerState.cpp  GteDX11RawBuffer.cpp  GteDX11Resource.cpp  GteDX11SamplerState.cpp  GteDX11Shader.cpp  GteDX11StructuredBuffer.cpp  GteDX11Texture.cpp  GteDX11Texture1.cpp  GteDX11Texture1Array.cpp  (+132 more)
(+38 files in other folders)
